--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <p class="welcome">Log in to get started</p>
     <img src="logo.png" alt="Logo" class="logo" />
     <form class="login">
-      <input type="text" placeholder="user" class="login__input login__input--user" />
+      <input type="text" placeholder="user(cr)" class="login__input login__input--user" />
       <!-- In practice, use type="password" -->
-      <input type="text" placeholder="PIN" maxlength="4" class="login__input login__input--pin" />
+      <input type="text" placeholder="PIN(1111)" maxlength="4" class="login__input login__input--pin" />
       <button class="login__btn">&rarr;</button>
     </form>
   </nav>
